--- a/about.html
+++ b/about.html
@@ -1,13 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>About - Saksham Biosurgical Services</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>About | Saksham Biosurgical Services</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <h1>About Us</h1>
-  <p>We specialize in hospital critical care devices and gas plant support.</p>
-  <a href="index.html">Back to Home</a>
+
+<header>
+  <h1>Saksham Biosurgical Services</h1>
+  <p>Empowering Hospitals with Critical Care Excellence</p>
+</header>
+
+<nav>
+  <a href="index.html">Home</a>
+  <a href="products.html">Products</a>
+  <a href="contact.html">Contact</a>
+</nav>
+
+<section>
+  <h2>About Us</h2>
+  <p>Saksham Biosurgical Services is a healthcare solution provider specializing in hospital infrastructure equipment. We deal in ICU, OT, medical gas pipeline systems, and emergency support. Our mission is to deliver cutting-edge equipment and full service support to ensure hospitals can provide top-tier patient care.</p>
+</section>
+
+<div class="whatsapp-button">
+  <a href="https://wa.me/917532040386" target="_blank">
+    <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+  </a>
+</div>
+
+<footer>
+  &copy; 2025 Saksham Biosurgical Services. All rights reserved.
+</footer>
+
 </body>
 </html>
