--- a/about.html
+++ b/about.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>About | Saksham Biosurgical Services</title>
-  <link rel="stylesheet" href="style.css" />
+   .about-heading {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1.5rem;
+}
+
+.about-heading h2 {
+  background-color: #e0f0ff;
+  border: 3px solid #0066cc;
+  padding: 1rem 2rem;
+  color: #004aad;
+  border-radius: 10px;
+  font-size: 2rem;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease;
+  text-align: center;
+}
+
+.about-heading h2:hover {
+  transform: scale(1.05);
+}
+
 </head>
 <body>
 
