--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+   <style>
    .about-heading {
   display: flex;
   justify-content: center;
@@ -22,7 +23,7 @@
 .about-heading h2:hover {
   transform: scale(1.05);
 }
-
+</style>
 </head>
 <body>
 
