--- a/products.html
+++ b/products.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Products - Saksham Biosurgical Services</title>
+  <link rel="aboutsheet" href="about.css">
 </head>
 <body>
   <h1>Our Products</h1>
