--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
 
 <section>
   <h2>About Us</h2>
-  <p>Saksham Biosurgical Services is a healthcare solution provider specializing in hospital infrastructure equipment. We deal in ICU, OT, medical gas pipeline systems, and emergency support. Our mission is to deliver cutting-edge equipment and full service support to ensure hospitals can provide top-tier patient care.</p>
+  <p>Established in 2021, Saksham Biosurgical Services is a trusted name in the field of hospital critical care equipment and medical infrastructure solutions. With a strong commitment to quality, reliability, and innovation, we specialize in providing a comprehensive range of critical care devices, surgical support systems, and end-to-end services for medical gas pipeline systems. Our goal is to empower healthcare institutions with advanced technologies and responsive support, ensuring optimal patient care and operational efficiency. Whether it’s an ICU setup, emergency ward, or gas plant installation, Saksham Biosurgical Services delivers integrated solutions tailored to the unique needs of hospitals, clinics, and healthcare providers across India.</p>
 </section>
 
 <div class="whatsapp-button">
