--- a/index.html
+++ b/index.html
@@ -108,10 +108,13 @@
     <a href="contact.html">Contact</a>
   </nav>
 
-  <section class="hero">
-    <h2>Your Partner in Hospital Equipment</h2>
-    <p>Delivering ICU, OT, and medical gas plant solutions tailored for hospitals and healthcare centers.</p>
-  </section>
+  <section class="carousel-section">
+  <div class="carousel">
+    <img src="image/01.jpg" alt="01">
+    <img src="image/02.jpg" alt="02">
+    <img src="image/03.jpg" alt="03">
+  </div>
+</section>
 
   <section class="services">
     <div class="card">
