--- a/index.html
+++ b/index.html
@@ -94,6 +94,15 @@
     }
   </style>
 </head>
+  <section class="carousel-wrapper">
+  <div class="slider">
+    <div class="slide-track">
+      <img class="slide" src="images/product1.jpg" alt="Product 1">
+      <img class="slide" src="images/product2.jpg" alt="Product 2">
+      <img class="slide" src="images/product3.jpg" alt="Product 3">
+    </div>
+  </div>
+</section>
 <body>
 
   <header>
