--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
     <section class="carousel-wrapper">
   <div class="slider">
     <div class="slide-track">
-      <img class="slide" src="images/product1.jpg" alt="Product 1">
-      <img class="slide" src="images/product2.jpg" alt="Product 2">
-      <img class="slide" src="images/product3.jpg" alt="Product 3">
+      <img class="slide" src="image/01.jpg" alt="01">
+      <img class="slide" src="image/02.jpg" alt="02">
+      <img class="slide" src="image/03.jpg" alt="03">
     </div>
   </div>
 </section>
