--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
       <img class="slide" src="image/01.jpg" alt="01">
       <img class="slide" src="image/02.jpg" alt="02">
       <img class="slide" src="image/03.jpg" alt="03">
+      <img class="slide" src="image/04.jpg" alt="04">
     </div>
   </div>
 </section>
