--- a/index.html
+++ b/index.html
@@ -115,10 +115,10 @@
     <section class="carousel-wrapper">
   <div class="slider">
     <div class="slide-track">
-      <img class="slide" src="image/01.jpg" alt="01">
-      <img class="slide" src="image/02.jpg" alt="02">
-      <img class="slide" src="image/03.jpg" alt="03">
-      <img class="slide" src="image/04.jpg" alt="04">
+      <img class="slide" src="image/01.png" alt="01">
+      <img class="slide" src="image/02.png" alt="02">
+      <img class="slide" src="image/03.png" alt="03">
+      <img class="slide" src="image/04.png" alt="04">
     </div>
   </div>
 </section>
