--- a/index.html
+++ b/index.html
@@ -113,6 +113,13 @@
 
  
     <section class="carousel-wrapper">
+    <div class="horizontal-images">
+       <img src="image/01.png" alt="Image 1">
+       <img src="image/02.png" alt="Image 2">
+       <img src="image/03.png" alt="Image 3">
+       <img src="image/04.png" alt="Image 4">
+    </div>
+
   <div class="slider">
     <div class="slide-track">
       <img class="slide" src="image/01.png" alt="01">
