--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <body>
   <header>
     <div class="header-left">
-       <img src="image/logo1.png" alt="Company Logo" class="logo">
+       <img src="image/logoo.png" alt="Company Logo" class="logo">
     </div>
     <h1>Saksham Biosurgical Services</h1>
     <p>Empowering Hospitals with Critical Care Excellence</p>
