--- a/index.html
+++ b/index.html
@@ -102,10 +102,12 @@
     <div class="header-left">
        <img src="image/logoo.png" alt="Company Logo" class="logo">
     </div>
-    <h1>Saksham Biosurgical Services</h1>
-    <p>Empowering Hospitals with Critical Care Excellence</p>
+     <div class="header-center">
+          <h1>Saksham Biosurgical Services</h1>
+          <p>Empowering Hospitals with Critical Care Excellence</p>
+     </div>
   </header>
-  <nav class="main-nav">
+  <nav class="header-right">
       <a href="about.html">About</a>
       <a href="products.html">Products</a>
       <a href="networks.html">Networks</a>
