--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 </head> 
 <body>
   <header>
-    <div class="header-left">
+    <div class="header-right">
        <img src="image/logoo.png" alt="Company Logo" class="logo">
     </div>
      <div class="header-center">
@@ -107,7 +107,7 @@
           <p>Empowering Hospitals with Critical Care Excellence</p>
      </div>
   </header>
-  <nav class="header-right">
+  <nav class="header-left">
       <a href="about.html">About</a>
       <a href="products.html">Products</a>
       <a href="networks.html">Networks</a>
